--- a/404.md
+++ b/404.md
@@ -1,6 +1,7 @@
 ---
 title: 404
 permalink: /404.html
+redirect_to: /
 ---
 
 ## {% include icon.html icon="fa-solid fa-heart-crack" %} Page Not Found
